--- a/config/database.yml
+++ b/config/database.yml
@@ -10,10 +10,13 @@ development:
 test:
   <<: *default
   database: bro1_test
-
+  
 production:
-  <<: *default
-  url: <%= ENV["DATABASE_URL"] %>
+  adapter: postgresql
+  encoding: unicode
+  url: <%= ENV['DATABASE_URL'] %>
+  pool: 5
+
 
 cable:
   <<: *default
@@ -26,3 +29,5 @@ queue:
 cache:
   <<: *default
   url: <%= ENV["DATABASE_URL"] %>
+
+
